changes made added shadowing

--- a/bio.html
+++ b/bio.html
@@ -26,7 +26,7 @@ body{
   margin-left: auto;
   margin-right: auto; 
   text-align: center;
-  
+  box-shadow: 0px 0px 8px #888888;
   
 }
 
@@ -82,14 +82,15 @@ picture{
 
 .accordion {
   background-color: rgba(253, 253, 253, 0.616);
-  color: #92bad1;
+  color: #888888;
   cursor: pointer;
   padding: 18px;
   width: 100%;
   text-align: center;
-  border: 1px solid #92bad1;
+  border: 1px solid #888888;
   outline: 1px solid rgba(255, 255, 255, 0.979);
   transition: 0.4s;
+  box-shadow: 5px 5px 8px #888888;
    
  
 }
@@ -178,19 +179,19 @@ img {
     <information>
     <button class="accordion">BRIEF BACKGROUND</button>
     <div class="panel">
-      <p>Louisiana kid....</p>
+      <p>"Brief Background about myself"</p>
     </div>
     
     <button class="accordion">EDUCATION</button>
     <div class="panel">
-      <p>Computer Science 2021 UL Lafayette
-          Applied Sciences 2017 SLCC
+      <p>Education Information here
       </p>
     </div>
     
     <button class="accordion">EMPLOYMENT</button>
     <div class="panel">
-      <p>Mainly Retail with managerial experience and experience with technoloty and service</p>
+      <p> Employment information here
+        </p>
     </div> 
     </information>
     <picture>
